--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
             flex-direction: column;
         }
 
+        @media only screen and (max-device-width: 480px) {
+            #chat-container {
+                width: 280px;
+                font-size: 12px;
+            }
+        }
+
         #messages {
             flex: 1;
             padding: 10px;
@@ -97,7 +104,6 @@
     </div>
 
     <script>
-        // script.js
 
         const messages = [
             { user1: { message: "Hi, can you get me a better deal for The Beekman, New York, July 24-28. Standard room" } },
@@ -169,8 +175,8 @@
                 const messageData = messages[i][user];
                 const messageText = messageData.message;
                 const isTemp = messageData.temp || false;
-                //const delayTime = messageData.delay || 1500;
-                const delayTime = messageData.delay || 10;
+                const delayTime = messageData.delay || 1500;
+
 
                 displayMessage(user, messageText, isTemp);
                 await delay(delayTime);
