--- a/test2.html
+++ b/test2.html
@@ -13,15 +13,13 @@
         }
 
         @font-face {
-            font-family: 'Proxima Nova';
+            font-family: 'Proxima Nova Regular';
             src: url('fonts/ProximaNova-Regular.otf') format('opentype');
-            font-weight: 400;
         }
 
         @font-face {
-            font-family: 'Proxima Nova';
+            font-family: 'Proxima Nova Light';
             src: url('fonts/ProximaNova-Light.otf') format('opentype');
-            font-weight: 300;
         }
 
 
@@ -37,7 +35,7 @@
         }
 
         #chat-container {
-            width: 360px;
+            width: 356px;
             height: 400px;
             /* Fixed height */
             background-color: #fffbff;
@@ -59,10 +57,11 @@
         }
 
         .time {
+            font-family: "Proxima Nova Light";
             font-size: 10px;
             color: #999;
             text-align: right;
-            margin-top: 5px;
+            margin-top: 4px;
         }
 
         .border-bottom-right-radius {
@@ -89,7 +88,22 @@
             margin-bottom: 4px !important;
         }
 
+        .tick {
+            display: inline-block;
+            width: 10px;
+            height: 10px;
+            background-image: url(images/tick-desktop.svg);
+        }
+
         @media only screen and (max-device-width: 480px) {
+
+            .tick {
+                display: inline-block;
+                width: 6px;
+                height: 7px;
+                background-image: url(images/tick-mobile.svg);
+            }
+
             #chat-container {
                 width: 280px;
                 font-size: 12px;
@@ -130,13 +144,18 @@
         }
 
         .message {
-            padding: 10px;
+            font-family: "Proxima Nova Regular";
+            padding: 8px 8px 4px 8px;
             border-radius: 16px;
             max-width: 80%;
             opacity: 0;
             transform: translateY(100%);
             animation: flyIn 0.5s forwards;
             transition: transform 1s, opacity 1s, max-height 0.5s;
+        }
+
+        .typing {
+            padding: 8px !important;
         }
 
         .user1 {
@@ -150,6 +169,7 @@
             color: #6F5F70;
             align-self: flex-start;
         }
+
 
 
 
@@ -189,41 +209,44 @@
     <script>
 
         const svg = `<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 50' height="8px" width="50px">
-                <circle fill='#000000' stroke='#000000' stroke-width='8' r='15' cx='40' cy='25'>
+                <circle fill='#8d8090' stroke='#8d8090' stroke-width='8' r='15' cx='40' cy='25'>
                     <animate attributeName='opacity' calcMode='spline' dur='2' values='1;0;1;'
                         keySplines='.5 0 .5 1;.5 0 .5 1' repeatCount='indefinite' begin='-.4'></animate>
                 </circle>
-                <circle fill='#000000' stroke='#000000' stroke-width='8' r='15' cx='100' cy='25'>
+                <circle fill='#8d8090' stroke='#8d8090' stroke-width='8' r='15' cx='100' cy='25'>
                     <animate attributeName='opacity' calcMode='spline' dur='2' values='1;0;1;'
                         keySplines='.5 0 .5 1;.5 0 .5 1' repeatCount='indefinite' begin='-.2'></animate>
                 </circle>
-                <circle fill='#000000' stroke='#000000' stroke-width='8' r='15' cx='160' cy='25'>
+                <circle fill='#8d8090' stroke='#8d8090' stroke-width='8' r='15' cx='160' cy='25'>
                     <animate attributeName='opacity' calcMode='spline' dur='2' values='1;0;1;'
                         keySplines='.5 0 .5 1;.5 0 .5 1' repeatCount='indefinite' begin='0'></animate>
                 </circle>
             </svg>`
 
+        const tick = `<div class="tick"></div>`
+
         const messages = [
             { user: "user1", message: "Hi, can you get me a better deal for The Beekman, New York, July 24-28. Standard room", time: "12:36 PM", classNames: ['border-bottom-right-radius', 'margin-bottom-small'] },
             { user: "user1", message: "I’m seeing it for $420/night", time: "12:36 PM", classNames: ['border-top-right-radius', 'margin-bottom-big'] },
-            { user: "user2", message: `${svg}Typing...`, delay: 2000, temp: true, classNames: ['border-bottom-left-radius', 'margin-bottom-big'] },
+            { user: "user2", message: `${svg}Typing...`, delay: 2000, temp: true, classNames: ['border-bottom-left-radius', 'margin-bottom-big', "typing"] },
             { user: "user2", message: "Let’s see what we can do for you!", time: "12:37 PM", delay: 1000, classNames: ['border-bottom-left-radius', 'margin-bottom-small'] },
+            { user: "user2", message: `${svg}Typing...`, delay: 2000, temp: true, classNames: ['border-bottom-left-radius', 'margin-bottom-big', "typing"] },
             { user: "user2", message: "Ok, we’ve reached out to the hotel and here’s what we got you:", time: "12:47 PM", classNames: ['border-bottom-left-radius', 'margin-bottom-small'] },
             { user: "user2", message: "$350/night (saving you $70/night)", time: "12:47 PM", classNames: ['border-top-left-radius', 'border-bottom-left-radius', 'margin-bottom-small'] },
             {
                 user: "user2",
                 message: `
-                    Free upgrade to King Premium Room! ($240 value!)
-                    <br> &#10004; $100 food & beverage credit
-                    <br> &#10004; Free breakfast for two ($60 value/day)
-                    <br> &#10004; Early check in & late checkout
-                    <br> &#10004; 24 hour cancelation window
+                    ${tick} Free upgrade to King Premium Room! ($240 value!)
+                    <br> ${tick}  $100 food & beverage credit
+                    <br> ${tick}  Free breakfast for two ($60 value/day)
+                    <br> ${tick}  Early check in & late checkout
+                    <br> ${tick}  24 hour cancelation window
                     `,
                 time: "12:47 PM",
                 classNames: ['border-top-left-radius', 'margin-bottom-big']
 
             },
-            { user: "user2", message: `${svg}Typing...`, delay: 2000, temp: true, classNames: ['border-bottom-left-radius', 'margin-bottom-big'] },
+            { user: "user2", message: `${svg}Typing...`, delay: 2000, temp: true, classNames: ['border-bottom-left-radius', 'margin-bottom-big', "typing"] },
             { user: "user2", message: "What do you think?", time: "12:50 PM", classNames: ['border-bottom-left-radius', 'margin-bottom-big'] },
             { user: "user1", message: "You did it again Winston! 🤩 Book it", time: "12:55 PM", delay: 1000, classNames: ['border-bottom-right-radius', 'margin-bottom-big'] },
             { user: "user2", message: "On it! 😉", time: "12:55 PM", delay: 1000, classNames: ['border-bottom-left-radius', 'margin-bottom-big'] },
@@ -305,9 +328,6 @@
                 // Trigger reflow for smooth transition
                 const messagesContainer = document.getElementById('messages');
                 messagesContainer.style.transform = 'translateY(0)';
-
-                console.log('123', 123);
-
             }
 
         }
