--- a/test2.html
+++ b/test2.html
@@ -153,7 +153,7 @@
             max-width: 84%;
             opacity: 0;
             transform: translateY(100%);
-            animation: flyIn 0.5s forwards;
+            animation: flyIn 0.8s forwards;
             transition: transform 1s, opacity 1s, max-height 0.5s;
         }
 
@@ -256,7 +256,7 @@
                         </div>
                         <div class="tick-block">
                             ${tick} 
-                            <div>Free breakfast for two<br>($60 value/day)</div>
+                            <div>Free breakfast for two ($60 value/day)</div>
                         </div>
                         <div class="tick-block">
                             ${tick} 
