--- a/test2.html
+++ b/test2.html
@@ -235,13 +235,13 @@
         const tick = `<div class="tick"></div>`
 
         const messages = [
-            { user: "user1", message: "Hi, can you get me a better deal for The Beekman, New York, July 24-28. Standard room", time: "12:36 PM", classNames: ['border-bottom-right-radius', 'margin-bottom-small'] },
+            { user: "user1", message: "Hi, can you get me a better deal for The Beekman, New York, July 24-28. Standard room", delay: 1000, time: "12:36 PM", classNames: ['border-bottom-right-radius', 'margin-bottom-small'] },
             { user: "user1", message: "I’m seeing it for $420/night", time: "12:36 PM", classNames: ['border-top-right-radius', 'margin-bottom-big'] },
             { user: "user2", message: `${svg}Typing...`, delay: 2000, temp: true, classNames: ['margin-bottom-big', "typing"] },
             { user: "user2", message: "Let’s see what we can do for you!", time: "12:37 PM", delay: 3000, classNames: ['border-bottom-left-radius', 'margin-bottom-big'] },
             { user: "user2", message: `${svg}Typing...`, delay: 2000, temp: true, classNames: ['margin-bottom-big', "typing"] },
-            { user: "user2", message: "Ok, we’ve reached out to the hotel and here’s what we got you:", time: "12:47 PM", classNames: ['border-bottom-left-radius', 'margin-bottom-small'] },
-            { user: "user2", message: "$350/night (saving you $70/night)", time: "12:47 PM", classNames: ['border-top-left-radius', 'border-bottom-left-radius', 'margin-bottom-small'] },
+            { user: "user2", message: "Ok, we’ve reached out to the hotel and here’s what we got you:", time: "12:47 PM", delay: 1000, classNames: ['border-bottom-left-radius', 'margin-bottom-small'] },
+            { user: "user2", message: "$350/night (saving you $70/night)", delay: 1000, time: "12:47 PM", classNames: ['border-top-left-radius', 'border-bottom-left-radius', 'margin-bottom-small'] },
             {
                 user: "user2",
                 message: `
@@ -269,6 +269,7 @@
                     </div>
                     `,
                 time: "12:47 PM",
+                delay: 3000,
                 classNames: ['border-top-left-radius', 'margin-bottom-big']
 
             },
